JNG-3404 Input is now considered during validation with query attributes - note: query relations' validation is not working yet